# code-base-python-grpc

./: .env.test  .gitignore  .pre-commit-config.yaml  README.md  example.env  main.py  pyproject.toml  pyrightconfig.json  test.ipynb
proto/: ai_service.proto
proto/ai_service/: ai_service.proto  requests.proto  responses.proto
proto/health/: health.proto
scripts/: generate_proto.py
src/ai_python_services/ai_agents/: __init__.py  ai_enum.py  audio_to_text_agents.py  llm_agents.py  vlm_agents.py
src/ai_python_services/core/constants/: grpc_metadata.py
src/ai_python_services/core/decorators/: auth.py
src/ai_python_services/proto/: __init__.py  ai_service_pb2.py  ai_service_pb2.pyi  ai_service_pb2_grpc.py  requests_pb2.pyi  responses_pb2.pyi
src/ai_python_services/proto/ai_service/: ai_service_pb2.py  ai_service_pb2_grpc.py  ai_service_requests_pb2.py  ai_service_requests_pb2.pyi  ai_service_requests_pb2_grpc.py  ai_service_responses_pb2.py  ai_service_responses_pb2.pyi  ai_service_responses_pb2_grpc.py  requests_pb2.py  requests_pb2_grpc.py  responses_pb2.py  responses_pb2_grpc.py
src/ai_python_services/proto/health/: health_pb2.py  health_pb2.pyi  health_pb2_grpc.py  health_requests_pb2.py  health_requests_pb2.pyi  health_requests_pb2_grpc.py  health_responses_pb2.py  health_responses_pb2.pyi  health_responses_pb2_grpc.py
src/ai_python_services/services/: ai_service.py
src/ai_python_services/services/health/: health_service.py
tests/: audio_test.m4a  test_llm_agents.py
tests/unit/: conftest.py
tests/unit/test_ai_agents/: test_audio_to_text_agents.py  test_llm_agents.py  test_vlm_agents.py
tests/unit/test_core/: test_auth.py
tests/unit/test_services/: test_ai_service.py  test_health_service.py
