[project]
name = "ai-python-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0",
    "google-genai>=1.19.0",
    "langchain-core>=0.3.65",
    "openai>=1.84.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pip>=25.1.1",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
]
